# permanentrecord

./: .gitignore  Makefile.am  Makefile.in  PermanentRecord.sln  PermanentRecord.vcxproj  README  as_alsa.cpp  as_alsa.h  as_applecore.h  as_applecore.mm  as_dsnd.cpp  as_dsnd.h  as_pulse.cpp  as_pulse.h  as_wasapi.cpp  as_wasapi.h  audev.h  aufmt.cpp  aufmt.h  aufmtui.cpp  aufmtui.h  ausrc.cpp  ausrc.h  ausrcls.cpp  ausrcls.h  autocut.cpp  autocut.h  common.cpp  common.h  config.h  config.h.in  configure  configure.ac  dbfs.cpp  dbfs.h  hls_audio.cpp  monclock.cpp  monclock.h  mp3write.cpp  mp3write.h  (+20 more)
autom4te.cache/: output.0  requests  traces.0  traces.1
fillin/endian/: endian.h
patches/: dvbsnoop-1.4.50-timeout-fix.patch
patches/dvbsnoop/: README.txt
scripts/: make-hls-from-fragments.pl
winres/: PermanentRecord.sln  PermanentRecord.vcxproj  config.h  permrec_audio.rc  resource.h
